[tool.poetry]
name = "flask-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "flask_learning"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.1"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.3"
sqlalchemy = "^2.0.16"
flask-wtf = "^1.1.1"
wtforms = "^3.0.1"
email-validator = "^2.0.0.post2"
flask-bcrypt = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
